// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminUserFormService createAdminRoleContext$ and deleteAdminRoleContext$ should handle admin role context 1`] = `
Object {
  "data": Object {
    "adminUserId": "test_ADMIN_ADMIN_USER_IT_ADMIN_USER_ID_03",
    "createdAt": Any<String>,
    "id": "test_ADMIN_ADMIN_ROLE_CONTEXT_IT_ADMIN_RC_ID_01",
    "roleContext": Object {
      "chainId": "test_chain_1_id",
      "contextId": "CTX_FIXTURE",
      "createdAt": Any<String>,
      "groupId": "test_group_1_id",
      "id": "test_ADMIN_ROLE_CONTEXT_IT_ROLE_CONTEXT_ID_01",
      "name": Object {
        "de": "Context Fixture",
        "en": "Context Fixture",
        "hu": "Context Fixture",
      },
      "role": "superuser",
      "unitId": "test_unit_1_id",
      "updatedAt": Any<String>,
    },
    "roleContextId": "test_ADMIN_ROLE_CONTEXT_IT_ROLE_CONTEXT_ID_01",
    "updatedAt": Any<String>,
  },
  "type": "insert",
}
`;

exports[`AdminUserFormService createAdminRoleContext$ and deleteAdminRoleContext$ should handle admin role context 2`] = `
Object {
  "data": Object {
    "adminUserId": "test_ADMIN_ADMIN_USER_IT_ADMIN_USER_ID_03",
    "createdAt": Any<String>,
    "id": "test_ADMIN_ADMIN_ROLE_CONTEXT_IT_ADMIN_RC_ID_01",
    "roleContext": Object {
      "chainId": "test_chain_1_id",
      "contextId": "CTX_FIXTURE",
      "createdAt": Any<String>,
      "groupId": "test_group_1_id",
      "id": "test_ADMIN_ROLE_CONTEXT_IT_ROLE_CONTEXT_ID_01",
      "name": Object {
        "de": "Context Fixture",
        "en": "Context Fixture",
        "hu": "Context Fixture",
      },
      "role": "superuser",
      "unitId": "test_unit_1_id",
      "updatedAt": Any<String>,
    },
    "roleContextId": "test_ADMIN_ROLE_CONTEXT_IT_ROLE_CONTEXT_ID_01",
    "updatedAt": Any<String>,
  },
  "type": "update",
}
`;

exports[`AdminUserFormService createAdminUser$ should create admin user 1`] = `
Object {
  "data": Object {
    "createdAt": Any<String>,
    "email": "john.doe@anyupp.com",
    "id": "test_ADMIN_ADMIN_USER_IT_ADMIN_USER_ID_01",
    "name": "John Doe",
    "phone": "+36123456789",
    "profileImage": null,
    "roleContexts": Object {
      "items": Array [],
      "nextToken": null,
    },
    "settings": null,
    "updatedAt": Any<String>,
  },
  "type": "insert",
}
`;

exports[`AdminUserFormService createAdminUserFormGroup should create form group 1`] = `
Object {
  "email": "",
  "name": "",
  "phone": "",
  "profileImage": "",
}
`;

exports[`AdminUserFormService updateAdminUser$ should update admin user 1`] = `
Object {
  "data": Object {
    "createdAt": Any<String>,
    "email": "mickey-mouse@anyupp.com",
    "id": "test_ADMIN_ADMIN_USER_IT_ADMIN_USER_ID_02",
    "name": "Micky Mouse",
    "phone": "+36123456789",
    "profileImage": null,
    "roleContexts": Object {
      "items": Array [],
      "nextToken": null,
    },
    "settings": null,
    "updatedAt": Any<String>,
  },
  "type": "update",
}
`;
